--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 # Secret files
 *create-login.sql
 *secret.config
+*secret-appsettings.json
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
