--- a/software/Desktop/TicTacToe/TicTacToe/TicTacToe.csproj
+++ b/software/Desktop/TicTacToe/TicTacToe/TicTacToe.csproj
@@ -9,4 +9,8 @@
     <AssemblyName>Tic Tac Toe</AssemblyName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TicTacToeSystem\TicTacToeSystem.csproj" />
+  </ItemGroup>
+
 </Project>
