--- a/software/JS-WebBasics/JS-WebBasics/JS-WebBasics.csproj
+++ b/software/JS-WebBasics/JS-WebBasics/JS-WebBasics.csproj
@@ -7,4 +7,29 @@
     <RootNamespace>JS_WebBasics</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Remove="Pages\fetchbasics.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.5.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\fetchbasics.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\fetchbasics.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\fetchbasics.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
