--- a/software/Recipe-react/package.json
+++ b/software/Recipe-react/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@Devorag/reactutils": "npm:@devorag/reactutils@^1.0.0",
+    "@Devorag/reactUtils": "npm:@devorag/reactutils@^1.0.0",
+    "@Devorag/ReactUtils": "npm:@devorag/reactutils@^1.0.0",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.28.0",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
