--- a/software/Recipe-react/.env.devlopment
+++ b/software/Recipe-react/.env.devlopment
@@ -1,1 +1,2 @@
-VITE_API_URL = https://localhost:5016/api/
+VITE_API_URL = https://dgrecipeapi.azurewebsites.net/api/
+VITE_API_URL_DEV = https://localhost:5016/api/
