--- a/software/Recipe-react/package.json
+++ b/software/Recipe-react/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@devorag/reactutils": "^1.0.0",
     "@Devorag/reactutils": "npm:@devorag/reactutils@^1.0.0",
     "@Devorag/reactUtils": "npm:@devorag/reactutils@^1.0.0",
     "@Devorag/ReactUtils": "npm:@devorag/reactutils@^1.0.0",
