--- a/software/Recipe-react/.env.production
+++ b/software/Recipe-react/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL=https://dgrecipeapi.azurewebsites.net/api/
-VITE_API_URL_DEV=https://dgrecipeapi.azurewebsites.net/api/
+VITE_API_URL=https://recipeapidg.azurewebsites.net/api/ 
+VITE_API_URL_DEV=https://recipeapidg.azurewebsites.net/api/ 
