--- a/software/Recipe-react/.env.production
+++ b/software/Recipe-react/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL=https://recipeapidg.azurewebsites.net/api/ 
-VITE_API_URL_DEV=https://recipeapidg.azurewebsites.net/api/ 
+VITE_API_URL_DEV=https://localhost:5016/api/ 
+VITE_API_URL_DEV1=https://recipeapidg.azurewebsites.net/api/ 
