--- a/software/Recipe-react/.env.development
+++ b/software/Recipe-react/.env.development
@@ -1,2 +1,3 @@
-VITE_API_URL_DEV=https://recipeapidg.azurewebsites.net/api/ 
-VITE_API_URL=https://localhost:5016/api/
+VITE_API_URL=https://recipeapidg.azurewebsites.net/api/
+VITE_API_URL_DEV=https://recipeapidg.azurewebsites.net/api/
+#VITE_API_URL=https://localhost:5016/api/
